--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -55,6 +55,9 @@ different flavours. This is actually a fun way to start.
 .B licks: 
 Learn licks (some included, pointers for more) as a
 starting point for improvisations.
+.IP -
+.B jamming:
+harpwise helps you to jam along a backing-track.
 .RE
 
 And, less interactive:
