jamming: extra argument required

--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -215,13 +215,21 @@ Feedback on what you are playing:
 harpwise listen c
 .RE
 
-or try:
+or:
 
 .IP
 harpwise quiz random
 .RE
 
-for a fun way to improve your harmonica knowledge.
+for a fun way to improve your harmonica knowledge
+
+or:
+
+.IP
+harpwise jam along 12
+.RE
+
+to jam along a 12bar-blues.
 
 .SH EXAMPLES
 
