--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -53,7 +53,7 @@ Learn licks (some included, pointers for more) as a
 starting point for improvisations.
 .IP -
 .B jamming:
-harpwise helps to jam along a backing-track.
+Scripted jamming along a backing-track.
 .RE
 
 And, less interactive:
