--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -209,7 +209,7 @@ to execute two basic tests and get some advice.
 
 .SH "QUICK START"
 
-Feedback on what you are playing:
+Feedback on holes and notes you are playing:
 
 .IP
 harpwise listen c
@@ -221,7 +221,7 @@ or:
 harpwise quiz random
 .RE
 
-for a fun way to improve your harmonica knowledge
+for a playful way to improve your harmonica knowledge
 
 or:
 
@@ -229,7 +229,7 @@ or:
 harpwise jam along 12
 .RE
 
-to jam along a 12bar-blues.
+for a guided jam along a 12bar-blues.
 
 .SH EXAMPLES
 
