--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -101,6 +101,11 @@ or 'all'; defaults to 'blues'.
 Note, that most scales are notated in second position (e.g. key of g
 for a c-harp); you may use the option --transpose-scale to change
 this.
+
+Harmonica-charts (e.g. in mode listen) show a one-letter shorthand
+of the scale, e.g. 'b' for 'blues'; you may supply your own letter
+after a colon, e.g. 'blues:B', which results in 'B' instead of the
+default 'b' beeing shown.
 .RE
 
 Some modes (e.g. listen, licks, play) accept additional arguments on
