--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -208,7 +208,7 @@ https://github.com/marcIhm/harpwise/blob/main/README.org
 
 ~/.harpwise/config.ini
 
-.SH "COMMANDLINE OPTIONS"
+.SH "COMMAND-LINE OPTIONS"
 
 Options are specific for each mode; as an example you may type
 
