--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -242,21 +242,17 @@ Feedback on holes and notes you are playing:
 harpwise listen c
 .RE
 
-or:
+Improve your harmonica knowledge:
 
 .IP
 harpwise quiz random
 .RE
 
-for a playful way to improve your harmonica knowledge
-
-or:
+Guided jam along a 12bar-blues:
 
 .IP
 harpwise jam along 12
 .RE
-
-for a guided jam along a 12bar-blues.
 
 .SH EXAMPLES
 
