--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -236,7 +236,7 @@ to execute two basic tests and get some advice.
 
 .SH "QUICK START"
 
-Feedback on holes and notes you are playing:
+Feedback on holes and notes you play:
 
 .IP
 harpwise listen c
