--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -206,7 +206,7 @@ https://github.com/marcIhm/harpwise/blob/main/README.org
 
 .SH "USER CONFIGURATION"
 
-~/.harpwise/config.ini
+~/harpwise/config.ini
 
 .SH "COMMAND-LINE OPTIONS"
 
