--- a/snap/README.org
+++ b/snap/README.org
@@ -71,3 +71,14 @@
 
   snap connections harpwise
   
+* Possible icons for snapstore
+
+  https://www.istockphoto.com/en/vector/harmonica-musical-instrument-icon-gm1302759223-394403290
+
+  https://www.istockphoto.com/en/vector/the-girl-is-playing-the-harmonica-gm1490459105-515030329
+
+  https://www.istockphoto.com/en/vector/kids-musical-instrument-harmonica-drawn-in-cartoon-style-vector-illustration-gm1365215514-436154913
+  
+  https://www.istockphoto.com/en/vector/black-filled-harmonica-musical-instrument-icon-isolated-gm1317650389-405020318
+
+  
