--- a/config/README.org
+++ b/config/README.org
@@ -9,7 +9,7 @@
   - config.yaml :: Main config file; see comments within for some
     explanations.
 
-  - ~/.harpwise/config.yaml :: Optional, may contain any of
+  - ~/harpwise/config.yaml :: Optional, may contain any of
     the config-keys from config.yaml and then overrides those; not included in
     git-versioning.
 
@@ -42,7 +42,7 @@
   notes is parsed, the same scale is written out with holes (prefixed with the
   word 'derived') and vice versa. So for example using
   scale_blues_with_holes.yaml will trigger the creation of
-  derived_scale_blues_with_notes.yaml (within ~/.harpwise/derived)
+  derived_scale_blues_with_notes.yaml (within ~/harpwise/derived)
 
 * Creating new scales for a given type
 
