--- a/README.org
+++ b/README.org
@@ -4,9 +4,10 @@
 
 A harmonica tool for the command line, using microphone and speaker.
 
-Harpwise supports your daily practice with scales and licks. It offers
-various tools, an explorable quiz and may guide your jamming. It can be
-used with diatonic (richter) or chromatic harmonicas in different keys.
+Harpwise supports your daily harmonica practice with scales, chords and
+licks. It offers various tools, an explorable quiz and may guide your
+jamming. It can be used with diatonic (richter) or chromatic harmonicas
+in different keys.
   
 * Table of Contents                                                   :TOC_1:
 
