--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -20,9 +20,10 @@
 .SH "DESCRIPTION"
 
 .B harpwise
-supports your daily practice with scales and licks. It offers
-various tools, an explorable quiz and may guide your jamming. It can be
-used with diatonic (richter) or chromatic harmonicas in different keys.
+supports your daily harmonica practice with scales, chords and licks.
+It offers various tools, an explorable quiz and may guide your jamming.
+It can be used with diatonic (richter) or chromatic harmonicas in
+different keys.
 
 The primary documentation of harpwise is its usage information, that
 can be retrieved by calling it without arguments:
