--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -227,7 +227,7 @@ recording of sounds.
 
 However, sometimes, sox might not be configured correctly out of the
 box. If you feel, that sox (and therefore harpwise) has problems
-with sounds or if you see spurious error messages, you may invoke:
+with sound or if you see spurious error messages, you may invoke:
   
 .IP
 harpwise tools diag
