--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -149,7 +149,7 @@ scales for chromatic: all, blues, blues-middle, chord-i, chord-i7, chord-iv,
     chord-iv7, chord-v, chord-v7, one, two
   scales for richter: all, blues, blues-middle, chord-i, chord-i7, chord-i7om3, 
     chord-iv, chord-iv7, chord-iv7om3, chord-v, chord-v7, chord-v7om3, drawbends, 
-    foo, major, major-full, major-pentatonic, mape, mape4, mape5, middle, minor, 
+    major, major-full, major-pentatonic, mape, mape4, mape5, middle, minor, 
     minor-pentatonic, mipe, mixolydian
 
 Note that advanced users may try to create their own scales, see usage
