--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -20,7 +20,7 @@
 .SH "DESCRIPTION"
 
 .B harpwise
-supports your daily harmonica practice with scales, chords and licks.
+supports your harmonica practice with scales, chords and licks.
 It offers various tools, an explorable quiz and may guide your jamming.
 It can be used with diatonic (richter) or chromatic harmonicas in
 different keys.
