--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -26,11 +26,12 @@ It can be used with diatonic (richter) or chromatic harmonicas in
 different keys.
 
 A note for beginners: 'richter' is the most common and affordable type
-of harmonica (and the default for harpwise).  It has 10 holes but no
-slider and is also known as 'blues harp'. A single harmonica (e.g. in
-the key of c or a) is enough to get started. harpwise by itself does not
-teach you how to play harmonica; rather it is a tool and can be helpful
-and motivating all along the way.  Start with: 'harpwise listen c'.
+of harmonica and the default for harpwise.  It has 10 holes but no
+slider and is also known as the 'blues harp'.  A single harmonica
+(e.g. in the key of c or a) is enough to get started.  This program
+(harpwise) by itself does not teach you how to play harmonica; rather it
+is a tool and meant to be helpful and motivating all along your
+learning-journey.  Start with: 'harpwise listen c'.
 
 The primary documentation of harpwise is its usage information, that
 can be retrieved by calling it without arguments:
