--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -54,15 +54,15 @@ The wise listens to your playing (e.g. for scales or bends)
 and helps to steer through a chord progression
 .IP -
 .B quiz:
-Train your ear, memory and knowledge of music theory with many
-different flavours. This is actually a fun way to start.
+Train your ear, memory and knowledge of music theory with
+more than 20 flavours; a fun way to start with harpwise
+.IP -
+.B jamming:
+Scripted jamming along a backing-track
 .IP -
 .B licks: 
 Learn licks (some included, pointers for more) as a
-starting point for improvisations.
-.IP -
-.B jamming:
-Scripted jamming along a backing-track.
+starting point for improvisations
 .RE
 
 And, less interactive:
@@ -72,15 +72,15 @@ And, less interactive:
 The wise plays scales, holes, licks, intervals, chords, etc.
 .IP -
 .B print:
-print and annotate the holes of scales or licks given on the commandline.
-Also print various informationo about licks, scales and much more
+print and annotate the holes or scales or licks given; in
+general everything, that the wise knows about
 .IP -
-.B tools: 
-Some non-interactive tools related to basic harmonica theory		
+.B tools:
+More then 20 tools for various harmonica needs
 .IP -
 .B samples:
 The wise assists in recording your own samples or generates them for
-you; this is a prerequisite for using many other modes, so you will be
+you; this is a prerequisite for using some other modes, so you will be
 asked to invoke it, when necessary
 .RE
 
