--- a/resources/players.org
+++ b/resources/players.org
@@ -10,9 +10,8 @@
 
 ** notes
 
-  - Born as Marion Walter Jacobs
-  - Quit school by the age of 12, working and busking in New Orleans,
-    Memphis and St. Louis
+  - Born as Marion Walter Jacobs.  Quit school by the age of 12, working
+    and busking in New Orleans, Memphis and St. Louis
   - Performed with Sonny Boy Williamson II, Sunnyland Slim, Honeyboy
     Edwards, and others on guitar and harmonica
   - Joined Muddy Waters' band in 1948
