--- a/resources/players.org
+++ b/resources/players.org
@@ -331,7 +331,7 @@
    
   - Began taking piano lessons at the age of four
   - Has been compared with Raymond Chandler (for the story in his songs)
-  - Harman had one of the tightest bands anywhere (quote Mary Katherine
+  - "Harman had one of the tightest bands anywhere" (Mary Katherine
     Aldin)
 
 ** sources
