--- a/resources/players.org
+++ b/resources/players.org
@@ -264,7 +264,7 @@
 ** songs
    
   - Harmonia Mundi Suite for Harmonica and Chamber Ensemble
-  - The Tritate Boogie
+  - The Tristate Boogie
 
 * Howlin' Wolf
   
@@ -1018,7 +1018,7 @@
    
   - Arrived in France in the late 80 with his harmonica
   - Studied computer science and discovered clubs in paris
-  - Worked with musicians such as Jean-Jacques Milteau Jean-Marie Ecay
+  - Worked with musicians such as Jean-Jacques, Milteau Jean-Marie Ecay
     or Olivier Ker Ourio
   - Beeing on tour he worked with Bill Deraime or Paul Personne
 
