--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -273,7 +273,9 @@ See the usage information of the individual modes.
 .br
 Copyright (c) 2021-2025 by Marc Ihm (marc@ihm.name) 
 .br
-This program is subject to the MIT License.
+Harpwise is subject to the MIT License, type 'harpwise --license' for details.
+.br
+Source code available at https://github.com/marcIhm/harpwise
 
 .SH SEE ALSO
 
